Jisoo's_Bio//add_Chat&&Comment_code

--- a/JisuKim.html
+++ b/JisuKim.html
@@ -13,6 +13,21 @@ Undergrad Major in Mathematics-Computer_Science at <a href="https://www.ucsd.edu
     <li><a href="Letters.html">COVER_LETTER</a></li>
 </ul>
 </body>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5f2e2990ed9d9d2627091ee7/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
 <div id="disqus_thread"></div>
 <script>
 
