Jisoo'sBio_Comment_Chat_Analysis

--- a/OnCampusLetter.html
+++ b/OnCampusLetter.html
@@ -1,11 +1,22 @@
-<body>
+<head>
       <h5> Letter1: On Campus Job</h5>
       16 July 2020<br>
       <strong>ITS Field Support Team</strong>
       Torrey Court, UC San Diego
       9500 Gilman Dr.
       La Jolla, CA. 92093
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-174965168-1');
+</script>
+
+</head>
+<body>
       <br><br>Dear UCSD ITS Field Support Team,
       <p>My name is Jisu Kim and I’m a Junior student majoring in Math-Computer Science. I am writing to express my interest
         in the ITS field assistant position as advertised on Handshake. As a math-cs student, installing programs
@@ -44,4 +55,3 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
