--- a/resume1.html
+++ b/resume1.html
@@ -1,16 +1,26 @@
-
+<head>
 Jisu Kim
 Computer Scientist
 Data Scientist
 Mathematician
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-174965168-1');
+</script>
+
+</head>
 
 
 
 Jisu Kim
 
 7755 Gaston Dr
-San Diego, CA 92126 
+San Diego, CA 92126
 
 206.669.5817
 jik003@ucsd.edu (Prefered contact)
