--- a/JisuKim.html
+++ b/JisuKim.html
@@ -1,11 +1,22 @@
 <title>Jisoo's Webpage</title>
 
+<head>
 <br>206.669.5817 (Currently only answered with I-messages || Internet phone call)
 <br>jik003@ucsd.edu (Prefered contact)
 <br>7755 Gaston Dr, San Diego, CA, 98128 (Currently Out of town)
 <br><img src="math&&cs1.jpg" width="20%">
 Undergrad Major in Mathematics-Computer_Science at <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math-cs Website">UCSD</a>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-174965168-1');
+</script>
+
+</head>
 <body>
   <h2>CONTENT</h2>
 <ul>
