--- a/Letters.html
+++ b/Letters.html
@@ -1,3 +1,15 @@
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-174965168-1');
+  </script>
+
+</head>
 <ol>
     <li>Letter1</li>
     <li><a href="OnCampusLetter.html" title="On Campus Job Cover Letter">Letter2</a></li>
@@ -22,4 +34,3 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
