--- a/JisuKim.html
+++ b/JisuKim.html
@@ -4,11 +4,11 @@
 <br>206.669.5817 (Currently only answered with I-messages || Internet phone call)
 <br>jik003@ucsd.edu (Prefered contact)
 <br>7755 Gaston Dr, San Diego, CA, 98128 (Currently Out of town)
-<br><img src="JisuKim.jpg" width="80%">
+<!--<br><img src="JisuKim.jpg" width="50%">-->
 Bachelor of Science in Mathematics-Computer_Science at <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math-cs Website">UCSD</a>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
-<script>
+<script>\
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
