--- a/JisuKim.html
+++ b/JisuKim.html
@@ -1,11 +1,11 @@
 <title>Jisoo's Webpage</title>
 
 <head>
-<br>206.669.5817 (Currently only answered with I-messages || Internet phone call)
-<br>jik003@ucsd.edu (Prefered contact)
-<br>7755 Gaston Dr, San Diego, CA, 98128 (Currently Out of town)
+<br>(206)669-5817
+<br>jik003@ucsd.edu
+<br>4085 Nobel drive, San Diego, CA, 92122
 <!--<br><img src="JisuKim.jpg" width="50%">-->
-Bachelor of Science in Mathematics-Computer_Science at <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math-cs Website">UCSD</a>
+Bachelor of Science. Cognitive Science - Machine Learning and Neural Computation major_<<a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" target="_blank" title="UCSD'cogs Website">UCSD</a>> Mathematics minor_<a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math Website">UCSD</a>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
 <script>\
