--- a/JisuKim.html
+++ b/JisuKim.html
@@ -27,7 +27,7 @@ Bachelor of Science. Cognitive Science - Machine Learning and Neural Computation
 <!--
 <h2><font color="red">CONTENT</font></h2>
 <ul>
-  <li><a href="resume1.html"><font color="red">RESUME</font></a></li>
+  <li><a href=jik003.github.io/JISU_RESUME.pdf><font color="red">RESUME</font></a></li>
   <li><a href="Letters.html"><font color="red">COVER_LETTER</font></a></li>
 </ul>
 -->
