--- a/JisuKim.html
+++ b/JisuKim.html
@@ -5,7 +5,7 @@
 <br>jik003@ucsd.edu
 <br>4085 Nobel drive, San Diego, CA, 92122
 <!--<br><img src="JisuKim.jpg" width="50%">-->
-Bachelor of Science. Cognitive Science - Machine Learning and Neural Computation major_<a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" target="_blank" title="UCSD'cogs Website">UCSD</a> Mathematics minor_<a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math Website">UCSD</a>
+Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math Website">Mathematics</a> minor
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
 <script>\
