--- a/JisuKim.html
+++ b/JisuKim.html
@@ -1,6 +1,8 @@
 <title>Jisoo's Webpage</title>
 
 <head>
+<br>
+  <img src="JISU_google_logo.png" alt="Jisoo's Webpage">
 <br>(206)669-5817
 <br>jik003@ucsd.edu
 <br>4085 Nobel drive, San Diego, CA, 92122
@@ -20,17 +22,9 @@
 <body>
   <h2>CONTENT</h2>
 <ul>
-    <li><a href=jik003.github.io/JISU_RESUME.pdf>RESUME</a></li>
+    <li><a href=https://www.jik003.github.io/JISU_RESUME.pdf>RESUME</a></li>
     <li><a href="Letters.html">COVER_LETTER</a></li>
 </ul>
-
-<!--
-<h2><font color="red">CONTENT</font></h2>
-<ul>
-  <li><a href=jik003.github.io/JISU_RESUME.pdf><font color="red">RESUME</font></a></li>
-  <li><a href="Letters.html"><font color="red">COVER_LETTER</font></a></li>
-</ul>
--->
 </body>
 
 <!--Start of Tawk.to Script-->
