--- a/JisuKim.html
+++ b/JisuKim.html
@@ -1,8 +1,23 @@
 <title>Jisoo's Webpage</title>
 
 <head>
+<style>
+ 	.my-div {
+
+	  border : 1px solid blue;
+
+	  text-align : center;
+
+	  padding : 100px 0;
+
+	}
+</style>
 <br>
-  <img src="JISU_google_logo.png" alt="Jisoo's Webpage">
+ <div class='my-div'>
+
+	  <img src="JISU_google_logo.png" alt="Jisoo's Webpage">
+
+	</div>
 <br>(206)669-5817
 <br>jik003@ucsd.edu
 <br>4085 Nobel drive, San Diego, CA, 92122
@@ -17,8 +32,9 @@
 
   gtag('config', 'UA-174965168-1');
 </script>
-
 </head>
+
+
 <body>
   <h2>CONTENT</h2>
 <ul>
