--- a/JisuKim.html
+++ b/JisuKim.html
@@ -18,23 +18,11 @@
 	  <img src="JISU_google_logo.png" alt="Jisoo's Webpage">
 
 	</div>
-<br>(206)669-5817
-<br>jik003@ucsd.edu
-<br>4085 Nobel drive, San Diego, CA, 92122
-  
-<br>Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math Website">Mathematics</a> minor
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
-<script>\
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-174965168-1');
-</script>
 </head>
 
 <head>
+<br>
 	<title>pop text test</title>
         <style>
             .text-pop-link{
@@ -43,7 +31,7 @@
             .text-pop{
                 display:inline-block;
                 position:relative;
-                color:red;
+                color:#5396d9;
                 animation-name:popup;
                 animation-duration:1.6s;   
                 animation-iteration-count: infinite;
@@ -77,19 +65,36 @@
         <a class="text-pop-link" href="./">
             <span class="text-pop text1">This</span>
             <span class="text-pop text2">is</span>
-            <span class="text-pop text3">Data</span>
-	    <span class="text-pop text3">&</span>
-	    <span class="text-pop text3">Design</span>
+            <span class="text-pop text3">Data & Design</span>
         </a>
     </body>
 
 <body>
+	
+<head>
+<br>(206)669-5817
+<br>jik003@ucsd.edu
+<br>4085 Nobel drive, San Diego, CA, 92122
+  
+<br>Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math Website">Mathematics</a> minor
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
+<script>\
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174965168-1');
+</script>
+
   <h2>CONTENT</h2>
 <ul>
     <li><a href=https://www.jik003.github.io/JISU_RESUME.pdf>RESUME</a></li>
     <li><a href="Letters.html">COVER_LETTER</a></li>
 </ul>
 </body>
+	
+</head>
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
