--- a/JisuKim.html
+++ b/JisuKim.html
@@ -80,6 +80,49 @@
   
 <br>Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math Website">Mathematics</a> minor
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>alignment practice</title>
+    <link href="alignpractice.css" rel="stylesheet" type="text/css" />
+<style>
+.parent{
+    width: 90%;
+    margin: 10px auto;
+    display: flex;
+}
+
+.first {
+    border: 1px solid #5396d9;
+    flex:1;
+    width:30%;
+    box-sizing: border-box;
+}
+
+.second{
+    border: 1px solid #5396d9;
+    flex:1;
+    margin: 0px 5%;
+    width:30%;
+    box-sizing: border-box;
+}
+
+.third{
+    border: 1px solid #5396d9;
+    flex:1;
+    width:30%;
+    box-sizing: border-box;
+}
+</style>
+</head>
+<body>
+    <div class="parent">
+        <div class="first">PROJECT</div>
+        <div class="second">PROJECT</div>
+        <div class="third">PROJECT</div>
+    </div>
+</body>
+	
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
 <script>\
   window.dataLayer = window.dataLayer || [];
@@ -95,7 +138,7 @@
     <li><a href="Letters.html">COVER_LETTER</a></li>
 </ul>
 </body>
-	
+
 </head>
 
 <!--Start of Tawk.to Script-->
