--- a/JisuKim.html
+++ b/JisuKim.html
@@ -98,7 +98,9 @@
     flex:1;
     width:30%;
     box-sizing: border-box;
-	text-align:center;
+    text-align:center;
+    background-color: #5396d9;
+    color:white
 }
 
 .second{
@@ -107,7 +109,9 @@
     margin: 0px 5%;
     width:30%;
     box-sizing: border-box;
-	text-align:center;
+    text-align:center;
+    background-color: #5396d9;
+    color:white
 }
 
 .third{
@@ -115,7 +119,9 @@
     flex:1;
     width:30%;
     box-sizing: border-box;
-	text-align:center;
+    text-align:center;
+    background-color: #5396d9;
+    color:white
 }
 </style>
 </head>
