--- a/JisuKim.html
+++ b/JisuKim.html
@@ -19,15 +19,19 @@
 		text-align:center;
             }
             .text1{
+		    text-align:center;
     
             }
             .text2{
                 animation-delay:0.4s;
+		    text-align:center;
             }
             .text3{
                 animation-delay:0.8s;
+		    text-align:center;
             }
             @keyframes popup{
+		    text-align:center;
                 
                 0%{
                     top:-7px;
