--- a/JisuKim.html
+++ b/JisuKim.html
@@ -131,7 +131,7 @@
 </head>
 <body>
     <div class="parent">
-        <div class="first">PROJECT</div>
+        <div class="first"><a href="https://github.com/COGS108/Group090Sp22/blob/master/FinalProjectGroup090Sp22.ipynb" target="_blank" title=“project1”>PROJECT</a></div>
         <div class="second">PROJECT</div>
         <div class="third">PROJECT</div>
     </div>
