--- a/JisuKim.html
+++ b/JisuKim.html
@@ -78,7 +78,12 @@
 <br>4085 Nobel drive, San Diego, CA, 92122
   
 <br>Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math Website">Mathematics</a> minor
-
+<style>
+	a:link {
+  text-decoration-line: none;
+  color : white;
+	}
+</style>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
