--- a/JisuKim.html
+++ b/JisuKim.html
@@ -130,8 +130,8 @@
 </head>
 <body>
     <div class="parent">
-        <div class="first"><a href="https://github.com/COGS108/Group090Sp22/blob/master/FinalProjectGroup090Sp22.ipynb" target="_blank" title=“project1”>PROJECT</a></div>
-        <div class="second">PROJECT</div>
+        <div class="first"><a href="https://github.com/COGS108/Group090Sp22/blob/master/FinalProjectGroup090Sp22.ipynb" style="color: white" target="_blank" title=“project108”>PROJECT</a></div>
+        <div class="second"><a href="https://colab.research.google.com/drive/1nJDj7KQAxaKUWrzyhKsPAti_d_EFG3Ro" style="color: white” target="_blank" title=“project118b">PROJECT</a></div>
         <div class="third">PROJECT</div>
     </div>
 </body>
