--- a/JisuKim.html
+++ b/JisuKim.html
@@ -77,7 +77,7 @@
 <br>jik003@ucsd.edu
 <br>4085 Nobel drive, San Diego, CA, 92122
   
-<br>Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" target="_blank" title="UCSD'math Website">Mathematics</a> minor
+<br>Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor
 <style>
 	a:link {
   text-decoration-line: none;
