--- a/JisuKim.html
+++ b/JisuKim.html
@@ -15,6 +15,7 @@
                 animation-duration:1.6s;   
                 animation-iteration-count: infinite;
                 animation-direction:alternate;
+		font-size: 32px;
             }
             .text1{
     
