--- a/JisuKim.html
+++ b/JisuKim.html
@@ -148,7 +148,7 @@
 
   <h2>CONTENT</h2>
 <ul>
-    <li><a href=https://www.jik003.github.io/JISU_RESUME.pdf>RESUME</a></li>
+    <li><a href="https://www.jik003.github.io/JISU_RESUME.pdf">RESUME</a></li>
     <li><a href="Letters.html">COVER_LETTER</a></li>
 </ul>
 </body>
