--- a/JisuKim.html
+++ b/JisuKim.html
@@ -148,8 +148,8 @@
 
   <h2>CONTENT</h2>
 <ul>
-    <li><a href="https://www.jik003.github.io/JISU_RESUME.pdf">RESUME</a></li>
-    <li><a href="Letters.html">COVER_LETTER</a></li>
+    <li><a href="JISU_RESUME.pdf" style="color : black">RESUME</a></li>
+    <li><a href="Letters.html" style="color : black">COVER_LETTER</a></li>
 </ul>
 </body>
 
