--- a/JisuKim.html
+++ b/JisuKim.html
@@ -15,7 +15,7 @@
                 animation-duration:1.6s;   
                 animation-iteration-count: infinite;
                 animation-direction:alternate;
-		font-size: 32px;
+		font-size: 40px;
             }
             .text1{
     
@@ -65,7 +65,7 @@
 <br>
  <div class='my-div'>
 
-	  <img src="JISU_google_logo.png" alt="Jisoo's Webpage">
+	  <img src="JISU_logo.png" alt="Jisoo's Webpage">
 
 	</div>
 
