--- a/JisuKim.html
+++ b/JisuKim.html
@@ -133,7 +133,8 @@
     <div class="parent">
         <div class="first"><a href="https://github.com/COGS108/Group090Sp22/blob/master/FinalProjectGroup090Sp22.ipynb" style="color: white" target="_blank" title=“project108”>PROJECT</a></div>
         <div class="second"><a href="https://colab.research.google.com/drive/1nJDj7KQAxaKUWrzyhKsPAti_d_EFG3Ro" style="color: white" target="_blank" title="project118b">PROJECT</a></div>
-        <div class="third">PROJECT</div>
+        <div class="third"><a href="https://colab.research.google.com/drive/1ULzulxt3Nsuf-mU_MzxaKdVTb8V-uDVW" style="color: white” target="_blank" title=“project118a">PROJECT</a>
+</div>
     </div>
 </body>
 	
