--- a/JisuKim.html
+++ b/JisuKim.html
@@ -57,9 +57,6 @@
 	  text-align : center;
 
 	  padding : 100px 0;
-		
-	  width: 200px;
-          height: 120px;
 
 	}
 </style>
@@ -68,7 +65,7 @@
 <br>
  <div class='my-div'>
 
-	  <img src="JISU_logo.png" alt="Jisoo's Webpage">
+	  <img src="JISU_google_logo.png" alt="Jisoo's Webpage">
 
 	</div>
 
