--- a/JisuKim.html
+++ b/JisuKim.html
@@ -43,7 +43,7 @@
 </head>
     <body>
         <a class="text-pop-link" href="./">
-            <span class="text-pop text1">	This</span>
+            <span class="text-pop text1">.      This</span>
             <span class="text-pop text2">is</span>
             <span class="text-pop text3">Data & Design</span>
         </a>
@@ -65,7 +65,7 @@
 <br>
  <div class='my-div'>
 
-	  <img src="JISU_google_logo.png" alt="Jisoo's Webpage">
+	  <img src="JISU_logo_web.png" alt="Jisoo's Webpage">
 
 	</div>
 
