--- a/JisuKim.html
+++ b/JisuKim.html
@@ -65,7 +65,7 @@
 <br>
  <div class='my-div'>
 
-	  <img src="JISU_logo_web.png" alt="Jisoo's Webpage">
+	  <img src="JISU_2.png" alt="Jisoo's Webpage">
 
 	</div>
 
