--- a/JisuKim.html
+++ b/JisuKim.html
@@ -74,11 +74,11 @@
 <body>
 	
 <head>
-<br>(206)669-5817
-<br>jik003@ucsd.edu
-<br>4085 Nobel drive, San Diego, CA, 92122
+<br><p style="font-size:20px;">(206)669-5817</p>
+<br><p style="font-size:20px;">jik003@ucsd.edu</p>
+<br><p style="font-size:20px;">4085 Nobel drive, San Diego, CA, 92122</p>
   
-<br>Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor
+<br><p style="font-size:20px;">Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor</p>
 <style>
 	a:link {
   text-decoration-line: none;
