--- a/JisuKim.html
+++ b/JisuKim.html
@@ -15,7 +15,7 @@
                 animation-duration:1.6s;   
                 animation-iteration-count: infinite;
                 animation-direction:alternate;
-		font-size: 40px;
+		font-size: 30px;
             }
             .text1{
     
@@ -43,9 +43,9 @@
 </head>
     <body>
         <a class="text-pop-link" href="./">
-            <span class="text-pop text1">      ! This</span>
-            <span class="text-pop text2">is</span>
-            <span class="text-pop text3">Data & Design</span>
+            <span class="text-pop text1">This is</span>
+            <span class="text-pop text2">Data & Design</span>
+            <span class="text-pop text3">!</span>
         </a>
     </body>
 	
@@ -74,11 +74,10 @@
 <body>
 	
 <head>
-<br><p style="font-size:20px;">(206)669-5817</p>
-<br><p style="font-size:20px;">jik003@ucsd.edu</p>
-<br><p style="font-size:20px;">4085 Nobel drive, San Diego, CA, 92122</p>
-  
-<br><p style="font-size:20px;">Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor</p>
+<p style="font-size:20px;">(206)669-5817</p>
+<p style="font-size:20px;">jik003@ucsd.edu</p>
+<p style="font-size:20px;">4085 Nobel drive, San Diego, CA, 92122</p>
+<p style="font-size:20px;">Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor</p>
 <style>
 	a:link {
   text-decoration-line: none;
