--- a/JisuKim.html
+++ b/JisuKim.html
@@ -1,5 +1,6 @@
 <title>Jisoo's Webpage</title>
 
+<!-- pop-up sentence -->
 <head>
 <br>
 	<title>pop text test</title>
@@ -48,7 +49,8 @@
             <span class="text-pop text3">!</span>
         </a>
     </body>
-	
+
+<!-- JISU_LOGO -->
 <style>
  	.my-div {
 
@@ -60,7 +62,6 @@
 
 	}
 </style>
-
 <head>
 <br>
  <div class='my-div'>
@@ -71,19 +72,23 @@
 
 </head>
 
-<body>
-	
-<head>
-<p style="font-size:20px;">(206)669-5817</p>
-<p style="font-size:20px;">jik003@ucsd.edu</p>
-<p style="font-size:20px;">4085 Nobel drive, San Diego, CA, 92122</p>
-<p style="font-size:20px;">Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor</p>
+<!-- Bio info -->
+<body>	
+	<head>
+	<p style="font-size:20px;">(206)669-5817</p>
+	<p style="font-size:20px;">jik003@ucsd.edu</p>
+	<p style="font-size:20px;">4085 Nobel drive, San Diego, CA, 92122</p>
+	<p style="font-size:20px;">Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor</p>
+	</head>
+</body>
+
+<!-- project box -->
 <style>
 	a:link {
-  text-decoration-line: none;
-  color : white;
-	}
-</style>
+  		text-decoration-line: none;
+  		color : white;
+		}
+</style>	
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -132,11 +137,11 @@
     <div class="parent">
         <div class="first"><a href="https://github.com/COGS108/Group090Sp22/blob/master/FinalProjectGroup090Sp22.ipynb" style="color: white" target="_blank" title="project108">PROJECT</a></div>
         <div class="second"><a href="https://colab.research.google.com/drive/1nJDj7KQAxaKUWrzyhKsPAti_d_EFG3Ro" style="color: white" target="_blank" title="project118b">PROJECT</a></div>
-        <div class="third"><a href="https://colab.research.google.com/drive/1ULzulxt3Nsuf-mU_MzxaKdVTb8V-uDVW" style="color: white" target="_blank" title="project118a">PROJECT</a>
-</div>
+        <div class="third"><a href="https://colab.research.google.com/drive/1ULzulxt3Nsuf-mU_MzxaKdVTb8V-uDVW" style="color: white" target="_blank" title="project118a">PROJECT</a></div>
     </div>
 </body>
-	
+
+<!-- ?? -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
 <script>\
   window.dataLayer = window.dataLayer || [];
@@ -146,13 +151,15 @@
   gtag('config', 'UA-174965168-1');
 </script>
 
-  <h2>CONTENT</h2>
+<!-- Resume and letter -->
+<body>
+<head>
+  <h3>CONTENT</h3>
 <ul>
     <li><a href="JISU_RESUME.pdf" style="color : black">RESUME</a></li>
     <li><a href="Letters.html" style="color : black">COVER_LETTER</a></li>
 </ul>
 </body>
-
 </head>
 
 <!--Start of Tawk.to Script-->
