--- a/Letters.html
+++ b/Letters.html
@@ -13,7 +13,9 @@
 
 <!--letter-->
 <ol>
-    <li>Letter1</li>
+    <li>SummerInternshipLetter</li>
+    <li><a href="OnCampusLetter.html" title="On Campus Job Cover Letter">Letter2</a></li>
+    <li>OnCampusJobLetter</li>
     <li><a href="OnCampusLetter.html" title="On Campus Job Cover Letter">Letter2</a></li>
 </ol>
 <div id="disqus_thread"></div>
