--- a/Letters.html
+++ b/Letters.html
@@ -14,9 +14,9 @@
 <!--letter-->
 <ol>
     <li>SummerInternshipLetter</li>
-    <li><a href="OnCampusLetter.html" title="On Campus Job Cover Letter">Letter2</a></li>
+    <li><a href="OnCampusLetter.html" style="color : black text-decoration: none" title="On Campus Job Cover Letter">Letter2</a></li>
     <li>OnCampusJobLetter</li>
-    <li><a href="OnCampusLetter.html" title="On Campus Job Cover Letter">Letter2</a></li>
+    <li><a href="OnCampusLetter.html" style="color : black text-decoration: none" title="On Campus Job Cover Letter">Letter2</a></li>
 </ol>
 <div id="disqus_thread"></div>
 <script>
