--- a/Letters.html
+++ b/Letters.html
@@ -13,10 +13,8 @@
 
 <!--letter-->
 <ol>
-    <li>SummerInternshipLetter</li>
-    <li><a href="OnCampusLetter.html" style="color : black text-decoration: none" title="On Campus Job Cover Letter">Letter2</a></li>
-    <li>OnCampusJobLetter</li>
-    <li><a href="OnCampusLetter.html" style="color : black text-decoration: none" title="On Campus Job Cover Letter">Letter2</a></li>
+    <li><a href="OnCampusLetter.html" style="color : black text-decoration: none" title="SummerInternshipLetter">Letter2</a></li>
+    <li><a href="OnCampusLetter.html" style="color : black text-decoration: none" title="OnCampusJobLetter">Letter2</a></li>
 </ol>
 <div id="disqus_thread"></div>
 <script>
