--- a/Letters.html
+++ b/Letters.html
@@ -13,8 +13,8 @@
 
 <!--letter-->
 <ol>
-    <li><a href="OnCampusLetter.html" style="color : black text-decoration: none" title="SummerInternshipLetter">Letter2</a></li>
-    <li><a href="OnCampusLetter.html" style="color : black text-decoration: none" title="OnCampusJobLetter">Letter2</a></li>
+    <li><a href="OnCampusLetter.html" style="color : black, text-decoration: none" title="SummerInternshipLetter">Summer Internship Letter</a></li>
+    <li><a href="OnCampusLetter.html" style="color : black, text-decoration: none" title="OnCampusJobLetter">On Campus Job Letter</a></li>
 </ol>
 <div id="disqus_thread"></div>
 <script>
