--- a/JisuKim.html
+++ b/JisuKim.html
@@ -44,9 +44,9 @@
 </head>
     <body>
         <a class="text-pop-link" href="./">
-            <span class="text-pop text1">This is</span>
-            <span class="text-pop text2">Data & Design</span>
-            <span class="text-pop text3">!</span>
+            <span class="text-pop text1">Here is</span>
+            <span class="text-pop text2">Jisu's</span>
+            <span class="text-pop text3">Bio !!</span>
         </a>
     </body>
 
