--- a/JisuKim.html
+++ b/JisuKim.html
@@ -135,9 +135,10 @@
 </head>
 <body>
     <div class="parent">
-        <div class="first"><a href="https://github.com/COGS108/Group090Sp22/blob/master/FinalProjectGroup090Sp22.ipynb" style="color: white" target="_blank" title="project108">PROJECT</a></div>
-        <div class="second"><a href="https://colab.research.google.com/drive/1nJDj7KQAxaKUWrzyhKsPAti_d_EFG3Ro" style="color: white" target="_blank" title="project118b">PROJECT</a></div>
-        <div class="third"><a href="https://colab.research.google.com/drive/1ULzulxt3Nsuf-mU_MzxaKdVTb8V-uDVW" style="color: white" target="_blank" title="project118a">PROJECT</a></div>
+	COGS108_FinalProjectGroup090Sp22.pdf
+        <div class="first"><a href="COGS108_FinalProjectGroup090Sp22.pdf" style="color: white" target="_blank" title="project108">PROJECT</a></div>
+        <div class="second"><a href="COGS118BFinalProjectGroup.pdf" style="color: white" target="_blank" title="project118b">PROJECT</a></div>
+        <div class="third"><a href="COGS118AFinalProject_group017.pdf" style="color: white" target="_blank" title="project118a">PROJECT</a></div>
     </div>
 </body>
 
