--- a/JisuKim.html
+++ b/JisuKim.html
@@ -72,6 +72,20 @@
 
 </head>
 
+<head>
+<style>
+a.ex1:hover, a.ex1:active {color: red;}
+a.ex2:hover, a.ex2:active {font-size: 150%;}
+a.ex3:hover, a.ex3:active {background: red;}
+a.ex4:hover, a.ex4:active {font-family: monospace;}
+a.ex5:visited, a.ex5:link {text-decoration: none;}
+a.ex5:hover, a.ex5:active {text-decoration: underline;}
+</style>
+</head>
+<body>
+<p><a class="ex4", "ex2">CONTACT!</a></p>
+</body>
+
 <!-- Bio info -->
 <body>	
 	<head>
