--- a/JisuKim.html
+++ b/JisuKim.html
@@ -76,14 +76,14 @@
 <style>
 a.ex1:hover, a.ex1:active {color: red;}
 a.ex2:hover, a.ex2:active {font-size: 150%;}
-a.ex3:hover, a.ex3:active {background: red;}
+a.ex3:hover, a.ex3:active {background: #5396d9;}
 a.ex4:hover, a.ex4:active {font-family: monospace;}
 a.ex5:visited, a.ex5:link {text-decoration: none;}
 a.ex5:hover, a.ex5:active {text-decoration: underline;}
 </style>
 </head>
 <body>
-<p><a class="ex4", "ex2">CONTACT!</a></p>
+<p><a class="ex2", "ex3", "ex4">CONTACT!</a></p>
 </body>
 
 <!-- Bio info -->
