--- a/JisuKim.html
+++ b/JisuKim.html
@@ -72,6 +72,7 @@
 
 </head>
 
+<!-- contact -->
 <head>
 <style>
 a.ex1:hover, a.ex1:active {color: red;}
@@ -83,7 +84,7 @@ a.ex5:hover, a.ex5:active {text-decoration: underline;}
 </style>
 </head>
 <body>
-<p><a class="ex2", "ex3", "ex4">CONTACT!</a></p>
+<p><a class="ex2", "ex3", "ex4">CONTACT</a></p>
 </body>
 
 <!-- Bio info -->
