--- a/JisuKim.html
+++ b/JisuKim.html
@@ -76,6 +76,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
+    <title>CONTACT</title>
     <style>
       .dropdown > ul > li {
         display: inline-block;
