--- a/JisuKim.html
+++ b/JisuKim.html
@@ -97,22 +97,22 @@
     <div class="dropdown">
       <ul>
         <li>
-          <a href="#">PHONE NUMBER</a>
+          <a href="#" style="color: black">PHONE NUMBER</a>
 	  <ul>
-            <li><a href="#">(206)669.5817</a></li>
+            <li><a href="#" style="color: black">(206)669.5817</a></li>
           </ul>
         </li>
         <li>
-          <a href="#">EMAIL ADDRESS</a>
+          <a href="#" style="color: black">EMAIL ADDRESS</a>
           <ul>
-            <li><a href="#">jik003@ucsd.edu</a></li>
-            <li><a href="#">jisu96sema@gmail.com</a></li>
+            <li><a href="#" style="color: black">jik003@ucsd.edu</a></li>
+            <li><a href="#" style="color: black">jisu96sema@gmail.com</a></li>
           </ul>
         </li>
         <li>
-          <a href="#">HOME ADDRESS</a>
+          <a href="#" style="color: black">HOME ADDRESS</a>
           <ul>
-            <li><a href="#">4085 Nobel drive, San Diego, CA, 92122</a></li>
+            <li><a href="#" style="color: black">4085 Nobel drive, San Diego, CA, 92122</a></li>
           </ul>
         </li>
       </ul>
