--- a/JisuKim.html
+++ b/JisuKim.html
@@ -72,6 +72,22 @@
 
 </head>
 
+<!-- contact -->
+<head>
+<style>
+a.ex1:hover, a.ex1:active {color: #5396d9;}
+a.ex2:hover, a.ex2:active {font-size: 300%;}
+a.ex3:hover, a.ex3:active {background: black;}
+a.ex4:hover, a.ex4:active {font-family: monospace;}
+a.ex5:visited, a.ex5:link {text-decoration: none;}
+a.ex5:hover, a.ex5:active {text-decoration: underline;}
+</style>
+</head>
+<body>
+<p><a class="ex2", "ex4">CONTACT</a></p>
+</body>
+
+<!-- Bio info1 -->
 <!doctype html>
 <html lang="ko">
   <head>
@@ -120,22 +136,7 @@
   </body>
 </html>
 
-<!-- contact -->
-<head>
-<style>
-a.ex1:hover, a.ex1:active {color: #5396d9;}
-a.ex2:hover, a.ex2:active {font-size: 300%;}
-a.ex3:hover, a.ex3:active {background: black;}
-a.ex4:hover, a.ex4:active {font-family: monospace;}
-a.ex5:visited, a.ex5:link {text-decoration: none;}
-a.ex5:hover, a.ex5:active {text-decoration: underline;}
-</style>
-</head>
-<body>
-<p><a class="ex2", "ex4">CONTACT</a></p>
-</body>
-
-<!-- Bio info -->
+<!-- Bio info2 -->
 <body>	
 	<head>
 	<p style="font-size:20px;">(206)669-5817</p>
