--- a/JisuKim.html
+++ b/JisuKim.html
@@ -84,7 +84,7 @@ a.ex5:hover, a.ex5:active {text-decoration: underline;}
 </style>
 </head>
 <body>
-<p><a class="ex2", "ex4">CONTACT</a></p>
+<p><a class="ex2", "ex4" style="font-size:20px">CONTACT</a></p>
 </body>
 
 <!-- Bio info1 -->
@@ -139,9 +139,6 @@ a.ex5:hover, a.ex5:active {text-decoration: underline;}
 <!-- Bio info2 -->
 <body>	
 	<head>
-	<p style="font-size:20px;">(206)669-5817</p>
-	<p style="font-size:20px;">jik003@ucsd.edu</p>
-	<p style="font-size:20px;">4085 Nobel drive, San Diego, CA, 92122</p>
 	<p style="font-size:20px;">Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor</p>
 	</head>
 </body>
