--- a/JisuKim.html
+++ b/JisuKim.html
@@ -84,7 +84,7 @@ a.ex5:hover, a.ex5:active {text-decoration: underline;}
 </style>
 </head>
 <body>
-<p><a class="ex2", "ex4" style="font-size:20px;">CONTACT</a></p>
+<p><a class="ex2", "ex4">CONTACT</a></p>
 </body>
 
 <!-- Bio info1 -->
