--- a/JisuKim.html
+++ b/JisuKim.html
@@ -115,18 +115,18 @@ a.ex5:hover, a.ex5:active {text-decoration: underline;}
         <li>
           <a href="#" style="color: black">PHONE NUMBER</a>
 	  <ul>
-            <li><a href="#" style="color: black">(206)669.5817</a></li>
+            <li><a href="#" style="color: black", "font-size: 200%">(206)669.5817</a></li>
           </ul>
         </li>
         <li>
           <a href="#" style="color: black">EMAIL ADDRESS</a>
           <ul>
-            <li><a href="#" style="color: black">jik003@ucsd.edu</a></li>
-            <li><a href="#" style="color: black">jisu96sema@gmail.com</a></li>
+            <li><a href="#" style="color: black", "font-size: 200%">jik003@ucsd.edu</a></li>
+            <li><a href="#" style="color: black", "font-size: 200%">jisu96sema@gmail.com</a></li>
           </ul>
         </li>
         <li>
-          <a href="#" style="color: black">HOME ADDRESS</a>
+          <a href="#" style="color: black", "font-size: 200%">HOME ADDRESS</a>
           <ul>
             <li><a href="#" style="color: black">4085 Nobel drive, San Diego, CA, 92122</a></li>
           </ul>
