--- a/JisuKim.html
+++ b/JisuKim.html
@@ -84,7 +84,7 @@ a.ex5:hover, a.ex5:active {text-decoration: underline;}
 </style>
 </head>
 <body>
-<p><a class="ex2", "ex4">CONTACT</a></p>
+<p><a class="ex4">CONTACT</a></p>
 </body>
 
 <!-- Bio info1 -->
@@ -135,6 +135,10 @@ a.ex5:hover, a.ex5:active {text-decoration: underline;}
     </div>
   </body>
 </html>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 
