--- a/JisuKim.html
+++ b/JisuKim.html
@@ -43,7 +43,7 @@
         </style>
 </head>
     <body>
-        <a class="text-pop-link" href="./">
+        <a class="text-pop-link" href="Bio.html">
             <span class="text-pop text1">Here is</span>
             <span class="text-pop text2">Jisu's</span>
             <span class="text-pop text3">Bio !!</span>
