--- a/JisuKim.html
+++ b/JisuKim.html
@@ -75,16 +75,11 @@
 <!-- contact -->
 <head>
 <style>
-a.ex1:hover, a.ex1:active {color: #5396d9;}
-a.ex2:hover, a.ex2:active {font-size: 300%;}
-a.ex3:hover, a.ex3:active {background: black;}
-a.ex4:hover, a.ex4:active {font-family: monospace;}
-a.ex5:visited, a.ex5:link {text-decoration: none;}
-a.ex5:hover, a.ex5:active {text-decoration: underline;}
+a.ex1:hover, a.ex1:active {font-size: 200%; color: #5396d9; font-family: monospace;}
 </style>
 </head>
 <body>
-<p><a class="ex4">CONTACT</a></p>
+<p><a class="ex1">CONTACT</a></p>
 </body>
 
 <!-- Bio info1 -->
@@ -143,18 +138,8 @@ a.ex5:hover, a.ex5:active {text-decoration: underline;}
 <br>
 
 <!-- project title -->
-<head>
-<style>
-a.ex1:hover, a.ex1:active {color: #5396d9;}
-a.ex2:hover, a.ex2:active {font-size: 300%;}
-a.ex3:hover, a.ex3:active {background: black;}
-a.ex4:hover, a.ex4:active {font-family: monospace;}
-a.ex5:visited, a.ex5:link {text-decoration: none;}
-a.ex5:hover, a.ex5:active {text-decoration: underline;}
-</style>
-</head>
 <body>
-<p><a class="ex2">PROJECTS</a></p>
+<p><a class="ex1" >PROJECTS</a></p>
 </body>
 
 <!-- project box -->
