--- a/JisuKim.html
+++ b/JisuKim.html
@@ -107,20 +107,20 @@ a.ex1:hover, a.ex1:active {font-size: 200%; color: #5396d9; font-family: monospa
     <div class="dropdown">
       <ul>
         <li>
-          <a href="#" style="color: black">PHONE NUMBER</a>
+          <a href="#" style="color: black">PHONE NUMBER.   </a>
 	  <ul>
             <li><a href="#" style="color: black", "font-size: 200%">(206)669.5817</a></li>
           </ul>
         </li>
         <li>
-          <a href="#" style="color: black">EMAIL ADDRESS</a>
+          <a href="#" style="color: black">EMAIL ADDRESS.   </a>
           <ul>
             <li><a href="#" style="color: black", "font-size: 200%">jik003@ucsd.edu</a></li>
             <li><a href="#" style="color: black", "font-size: 200%">jisu96sema@gmail.com</a></li>
           </ul>
         </li>
         <li>
-          <a href="#" style="color: black", "font-size: 200%">HOME ADDRESS</a>
+          <a href="#" style="color: black", "font-size: 200%">HOME ADDRESS.   </a>
           <ul>
             <li><a href="#" style="color: black">4085 Nobel drive, San Diego, CA, 92122</a></li>
           </ul>
