--- a/JisuKim.html
+++ b/JisuKim.html
@@ -77,6 +77,7 @@
 a.ex1:hover, a.ex1:active {font-size: 200%; color: #5396d9; font-family: monospace;}
 </style>
 </head>
+
 <body>
 <p><a class="ex1">CONTACT</a></p>
 </body>
@@ -133,7 +134,7 @@ a.ex1:hover, a.ex1:active {font-size: 200%; color: #5396d9; font-family: monospa
 <br>
 
 
-<!-- project title -->
+<!-- project -->
 <body>
 <p><a class="ex1" >PROJECTS</a></p>
 </body>
@@ -197,7 +198,7 @@ a.ex1:hover, a.ex1:active {font-size: 200%; color: #5396d9; font-family: monospa
     </div>
 </body>
 
-<!-- ?? -->
+<!-- . -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174965168-1"></script>
 <script>\
   window.dataLayer = window.dataLayer || [];
