--- a/Letters.html
+++ b/Letters.html
@@ -13,7 +13,7 @@
 
 <!--letter-->
 <ol>
-    <li><a href="OnCampusLetter.html" style="color : black, text-decoration: none" title="SummerInternshipLetter">Summer Internship Letter</a></li>
+    <li><a href="" style="color : black, text-decoration: none" title="SummerInternshipLetter">Summer Internship Letter</a></li>
     <li><a href="OnCampusLetter.html" style="color : black, text-decoration: none" title="OnCampusJobLetter">On Campus Job Letter</a></li>
 </ol>
 <div id="disqus_thread"></div>
