--- a/Letters.html
+++ b/Letters.html
@@ -12,14 +12,22 @@
 </head>
 
 <!--letter-->
+<html>
+<style>
+html * {
+        font-family: verdana;
+      }
+</style>
+
 <ol>
-    <li><a href="" style="color : black, text-decoration: none" title="SummerInternshipLetter">Summer Internship Letter</a></li>
-    <li><a href="OnCampusLetter.html" style="color : black, text-decoration: none" title="OnCampusJobLetter">On Campus Job Letter</a></li>
+    <li><a href="" style="color: black" target="_blank" title="SummerInternshipLetter">Summer Internship Letter</a></li>
+    <li><a href="OnCampusLetter.html" style="color: #5396d9" target="_blank" title="OnCampusJobLetter">On Campus Job Letter</a></li>
 </ol>
 <div id="disqus_thread"></div>
-<script>
-
+</html>
+  
 <!--Start of Tawk.to Script-->
+<script>
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
