--- a/JisuKim.html
+++ b/JisuKim.html
@@ -215,7 +215,7 @@ a.ex1:hover, a.ex1:active {font-size: 200%; color: #5396d9; font-family: verdana
 <!-- Resume and letter -->
 <body>
 <head>
-  <h3>a class="ex1">CONTENT</a></h3>
+  <h3><a class="ex1">CONTENT</a></h3>
 <ul>
     <li><a href="JISU_RESUME.pdf" style="color : black">RESUME</a></li>
     <li><a href="Letters.html" style="color : black">COVER_LETTER</a></li>
