--- a/JisuKim.html
+++ b/JisuKim.html
@@ -42,13 +42,15 @@
             
         </style>
 </head>
+<head>
     <body>
-        <a class="text-pop-link" href="Bio.html">
+        <h3><a class="text-pop-link" href="Bio.html">
             <span class="text-pop text1">Here is</span>
             <span class="text-pop text2">Jisu's</span>
             <span class="text-pop text3">Bio !!</span>
-        </a>
+        </a></h3>
     </body>
+</head>
 
 <!-- JISU_LOGO -->
 <style>
