--- a/JisuKim.html
+++ b/JisuKim.html
@@ -45,9 +45,9 @@
 <head>
     <body>
         <h3><a class="text-pop-link" href="Bio.html">
-            <span class="text-pop text1">Here is</span>
-            <span class="text-pop text2">Jisu's</span>
-            <span class="text-pop text3">Bio !!</span>
+            <span class="text-pop text1">Click Me!</span>
+            <span class="text-pop text2">See</span>
+            <span class="text-pop text3">Jisu's Bio🐳</span>
         </a></h3>
     </body>
 </head>
