--- a/JisuKim.html
+++ b/JisuKim.html
@@ -44,7 +44,7 @@
 </head>
 <head>
     <body>
-        <h3><a class="text-pop-link" href="Bio.html">
+        <h3><a class="text-pop-link" href="Bio.html" target="_blank">
             <span class="text-pop text1">Click Me!</span>
             <span class="text-pop text2">See</span>
             <span class="text-pop text3">Jisu's Bio🐳</span>
@@ -219,8 +219,8 @@ a.ex1:hover, a.ex1:active {font-size: 200%; color: #5396d9; font-family: verdana
 <head>
   <h3><a class="ex1">CONTENT</a></h3>
 <ul>
-    <li><a href="JISU_RESUME.pdf" style="color : black">RESUME</a></li>
-    <li><a href="Letters.html" style="color : black">COVER_LETTER</a></li>
+    <li><a href="JISU_RESUME.pdf" style="color : black" target="_blank">RESUME</a></li>
+    <li><a href="Letters.html" style="color : black" target="_blank">COVER_LETTER</a></li>
 </ul>
 </body>
 </head>
