--- a/JisuKim.html
+++ b/JisuKim.html
@@ -46,8 +46,8 @@
     <body>
         <h3><a class="text-pop-link" href="Bio.html" target="_blank">
             <span class="text-pop text1">Click Me!</span>
-            <span class="text-pop text2">See</span>
-            <span class="text-pop text3">Jisu's Bio🐳</span>
+            <span class="text-pop text2">Link in my bio</span>
+            <span class="text-pop text3">🐳</span>
         </a></h3>
     </body>
 </head>
