--- a/JisuKim.html
+++ b/JisuKim.html
@@ -219,7 +219,7 @@ a.ex1:hover, a.ex1:active {font-size: 200%; color: #5396d9; font-family: verdana
 <head>
   <h3><a class="ex1">CONTENT</a></h3>
 <ul>
-    <li><a href="JISU_RESUME.pdf" style="color : black" target="_blank">RESUME</a></li>
+    <li><a href="JISU-KIM_RESUME.pdf" style="color : black" target="_blank">RESUME</a></li>
     <li><a href="Letters.html" style="color : black" target="_blank">COVER_LETTER</a></li>
 </ul>
 </body>
