--- a/JisuKim.html
+++ b/JisuKim.html
@@ -27,6 +27,12 @@
             .text3{
                 animation-delay:0.8s;
             }
+            .text4{
+                animation-delay:0.12s;
+            }
+            .text5{
+                animation-delay:0.16s;
+            }
             @keyframes popup{
                 
                 0%{
@@ -45,9 +51,11 @@
 <head>
     <body>
         <h3><a class="text-pop-link" href="Bio.html" target="_blank">
-            <span class="text-pop text1">Click Me!</span>
-            <span class="text-pop text2">Link in my bio</span>
-            <span class="text-pop text3">🐳</span>
+            <span class="text-pop text1">Jisu K. </span>
+            <span class="text-pop text2">Data </span>
+            <span class="text-pop text3">Machine Learning </span>
+            <span class="text-pop text4">QA Engineer </span>
+            <span class="text-pop text5">Clink here!</span> //🐳
         </a></h3>
     </body>
 </head>
