--- a/JisuKim.html
+++ b/JisuKim.html
@@ -11,7 +11,7 @@
             .text-pop{
                 display:inline-block;
                 position:relative;
-                color:#5396d9;
+                color:#1B4483;
                 animation-name:popup;
                 animation-duration:1.6s;   
                 animation-iteration-count: infinite;
@@ -55,7 +55,7 @@
             <span class="text-pop text2">Data </span>
             <span class="text-pop text3">Machine Learning </span>
             <span class="text-pop text4">QA Engineer </span>
-            <span class="text-pop text5">Clink here!</span> //🐳
+            <span class="text-pop text5">Clink here!</span> <!-- 🐳 -->
         </a></h3>
     </body>
 </head>
