--- a/JisuKim.html
+++ b/JisuKim.html
@@ -1,5 +1,15 @@
 <title>Jisoo's Webpage</title>
 
+
+<!DOCTYPE html><html lang="en" class="scroll-smooth"><head><meta charSet="utf-8"/><meta name="viewport" content="width=device-width"/><script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+
+              gtag('config', 'G-4FFCWEC2WB', {
+                page_path: window.location.pathname,
+              });
+
 <!-- pop-up sentence -->
 <head>
 <br>
